# Talk2Form

./: .gitignore  64kbps_sample.webm  Health.py  Health2.py  README.md  build.sh  config.py  create_superuser_script.py  gpt.py  main.py  pyproject.toml  record.py  render.yaml  requirements.txt  testaudio.m4a  transcript.txt  whisper.py
CLI-version/: answers.txt  formprocessing.py  gpt.py  main.py  test.py  whisper.py
CLI-version/debug_examples/: sample_transcript.txt
debug_examples/: form.txt  full_form.txt  full_form_single_line.txt
static/css/: styles.css
talktoform/: asgi.py  db.sqlite3  manage.py  pyproject.toml  settings.py
talktoform/talktoform/: settings.py  urls.py  wsgi.py
talktoform/temp/: audio100.webm  audio101.webm
talktoform/templates/: dashboard.html  editform.html  form.html  index.html  record.html  responseform.html  signup.html  temp.html  usersettings.html
talktoform/website/: admin.py  models.py  test.py  urls.py  views.py
templates/: dashboard.html  editform.html  index.html  record.html  responseform.html  signup.html  usersettings.html
website/: admin.py  models.py  tests.py  urls.py  views.py
website/migrations/: 0001_initial.py  0002_question_editing.py  0003_remove_audiofile_file_path_audiofile_audio_file.py  0004_alter_formresponse_response.py  0005_form_form_template_id.py  0006_audiofile_transcript.py  0008_alter_settings_ai_model_id_and_more.py  0009_rename_settings_formsettings.py  0011_alter_formconfig_presence_penalty_and_more.py
website/utils/: audioconvert.py  config.py  gpt.py  whisper.py
(+8 files in other folders)
